--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
     <div class="wrapper">
         <div class="content">
+            <div class="background"></div>
             <h1 class="page-title">Faça seu pedido abaixo:</h1>
             <hr>
 
@@ -103,9 +104,10 @@
                     </select>
                 </div>
                 
-                <button type="submit" class="btn btn-primary btn-block">Enviar</button> <br> <br>
+                <button type="submit" class="btn btn-primary btn-block">Enviar</button>
             </form>
         </div>
+        <p class="attrib">&copy; 2018 PedeWhats</p>
     </div>
 
     <!-- JavaScript (Opcional) -->
