--- a/index.html
+++ b/index.html
@@ -103,6 +103,49 @@
                         <option value="sabor10">sabor10</option>
                     </select>
                 </div>
+
+                
+                <div class="form-group">
+                    <label for="pagamento">Forma de Pagamento</label> <br>
+                    <div class="form-check">
+                        <input type="radio" name="pagamento" class="form-check-input" value="dinheiro">
+                        <label class="form-check-label">
+                            Dinheiro
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="pagamento" class="form-check-input" value="cdc">
+                        <label class="form-check-label">
+                            Cartão de Crédito
+                        </label>
+                    </div>
+                    <div class="form-check">
+                            <input type="radio" name="pagamento" class="form-check-input" value="cdb">
+                            <label class="form-check-label">
+                                Cartão de Débito
+                            </label>
+                        </div>
+                </div>
+
+                <div id="dados-cdc">
+
+                    <div class="form-group">
+                        <label for="cdc">Cartão de Crédito</label>
+                        <input type="text" class="form-control" id="cdc" name="cdc" data-mask="0000.0000.0000.0000">
+                    </div>
+                    <div class="form-group">
+                            <label for="cdc-expiration">Mês e Ano de Validade</label>
+                            <input type="text" class="form-control" placeholder="MM/AA" id="cdc-expiration" name="cdc-expiration" data-mask="99/99">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="cdc-expiration">CVV (3 dígitos atrás do cartão)</label>
+                        <input type="text" class="form-control" placeholder="MM/AA" id="cdc-cvv" name="cdc-cvv" data-mask="999">
+                    </div>
+
+                </div>
+
+
                 
                 <button type="submit" class="btn btn-primary btn-block">Enviar</button>
             </form>
