--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                     <div class="form-group">
                         <label for="cdc-expiration">CVV (3 dígitos atrás do cartão)</label>
-                        <input type="text" class="form-control" placeholder="MM/AA" id="cdc-cvv" name="cdc-cvv" data-mask="999">
+                        <input type="text" class="form-control" id="cdc-cvv" name="cdc-cvv" data-mask="999">
                     </div>
 
                 </div>
