--- a/index.html
+++ b/index.html
@@ -103,6 +103,30 @@
                         <option value="sabor10">sabor10</option>
                     </select>
                 </div>
+
+                
+                <div class="form-group">
+                    <label for="pagamento">Forma de Pagamento</label> <br>
+                    <div class="form-check">
+                        <input type="radio" name="pagamento" class="form-check-input" value="dinheiro">
+                        <label class="form-check-label">
+                            Dinheiro
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="pagamento" class="form-check-input" value="cdc">
+                        <label class="form-check-label">
+                            Cartão de Crédito
+                        </label>
+                    </div>
+                    <div class="form-check">
+                            <input type="radio" name="pagamento" class="form-check-input" value="cdb">
+                            <label class="form-check-label">
+                                Cartão de Débito
+                            </label>
+                        </div>
+                </div>
+
                 
                 <button type="submit" class="btn btn-primary btn-block">Enviar</button>
             </form>
