--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 class="page-title">Faça seu pedido abaixo:</h1>
             <hr>
 
-            <form method="GET">
+            <form method="GET" id="formularioPedirWhats">
                 <div class="form-group">
                     <label for="nome">Seu nome</label>
                     <input type="text" class="form-control" id="nome" name="nome" required>
@@ -38,15 +38,15 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="mais-sabor">A pizza tem mais de um sabor?</label> <br>
+                    <label for="mais_sabor">A pizza tem mais de um sabor?</label> <br>
                     <div class="form-check">
-                        <input type="radio" name="mais-sabor" class="form-check-input" value="sim">
+                        <input type="radio" name="mais_sabor" class="form-check-input" value="sim">
                         <label class="form-check-label">
                             Sim
                         </label>
                     </div>
                     <div class="form-check">
-                        <input type="radio" name="mais-sabor" class="form-check-input" value="não">
+                        <input type="radio" name="mais_sabor" class="form-check-input" value="não">
                         <label class="form-check-label">
                             Não
                         </label>
@@ -89,7 +89,7 @@
 
                 <div class="form-group">
                     <label id="sabor-inteiro-label" for="sabor-inteiro">Selecione o sabor da pizza inteira</label>
-                    <select name="sabor-inteiro" id="sabor-inteiro" class="form-control">
+                    <select name="sabor_inteiro" id="sabor_inteiro" class="form-control">
                         <option value=""></option>
                         <option value="sabor1">sabor1</option>
                         <option value="sabor2">sabor2</option>
@@ -142,7 +142,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js" integrity="sha256-u7MY6EG5ass8JhTuxBek18r5YG6pllB9zLqE4vZyTn4=" crossorigin="anonymous"></script>
 
     <!-- JavaScript personalizado -->
-    <script src="js/script.js"></script>
+    <!-- Adcionado propriedade module -->
+    <script type="module" src="js/script.js"></script>
 
 </body>
 
